Fixes to enable Library to run independently with Sprockets module uninstalled (no tagging support available). Fixed RSS autodiscovery links on timeline page.
Mark as V1.0 BETA.

git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/library_ipf/trunk@24341 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,3 +1,7 @@
-<b><u>=> Unreleased: Version 1.0 Beta</u></b>
+Version history
+===============
 
-- First public release of the module.
+Version 1.0 BETA (29/7/2012)
+----------------------------
+
+- First beta release of the module.
