* Fix start page preference. * Add 'new' publications as a submenu item. * Mark as 1.02 beta.
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/library_ipf/trunk@24851 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,3 +12,8 @@ Version 1.0 Final (16/1/2013)
 Version 1.01 Final (22/1/2013)
 ------------------------------
 - Fix incorrect data type assignment in several preferences ('string' should be 'text').
+
+Version 1.02 BETA
+-----------------
+- Fix start page preference (wasn't working).
+- Add 'new' publications as a submenu option.
