Fix broken pagination in category view.
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/library_ipf/trunk@24899 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -16,5 +16,7 @@ Version 1.01 Final (22/1/2013)
 Version 1.02 BETA
 -----------------
 - Fix start page preference (wasn't working).
+- Fix broken hits counter.
 - Add 'new' publications as a submenu option.
 - Substantially improve efficiency of search function, especially for large result sets
+- Fix broken pagination in category view
