Mark as Library V1.02 final.
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/library_ipf/trunk@24906 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -13,8 +13,8 @@ Version 1.01 Final (22/1/2013)
 ------------------------------
 - Fix incorrect data type assignment in several preferences ('string' should be 'text').
 
-Version 1.02 BETA
------------------
+Version 1.02 Final (20/2/2013)
+------------------------------
 - Fix start page preference (wasn't working).
 - Fix broken hits counter.
 - Add 'new' publications as a submenu option.
