Remove incorrect closing anchor tag on item titles.
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/library_ipf/trunk@25018 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -20,3 +20,7 @@ Version 1.02 Final (20/2/2013)
 - Add 'new' publications as a submenu option.
 - Substantially improve efficiency of search function, especially for large result sets
 - Fix broken pagination in category view
+
+Version 1.03 trunk
+------------------
+- Removed incorrect closing anchor tag on item titles.
