Work around HTML Purifier comment insertion issue (Smarty evaluates comments in an otherwise empty field as TRUE).
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/library_ipf/trunk@25019 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -24,3 +24,4 @@ Version 1.02 Final (20/2/2013)
 Version 1.03 trunk
 ------------------
 - Removed incorrect closing anchor tag on item titles.
+- Work around HTML Purifier comment insertion / template issue (Smarty evaluates comments in an otherwise empty field as TRUE)
