- Fixed broken default language preference when adding new publication
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/library_ipf/trunk@25095 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -28,3 +28,4 @@ Version 1.03 trunk
 - Fixed search function bug that was crashing profile views.
 - Search now examines the creator, extended_text and publisher fields (in addition to title and description)
 - Fixed broken default language preference when adding new publication
+- Add user-side edit/delete links (admins only)
