--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -21,8 +21,8 @@ Version 1.02 Final (20/2/2013)
 - Substantially improve efficiency of search function, especially for large result sets
 - Fix broken pagination in category view
 
-Version 1.03 trunk
-------------------
+Version 1.03 Final (1/8/2013)
+-----------------------------
 - Removed incorrect closing anchor tag on item titles.
 - Work around HTML Purifier comment insertion / template issue (Smarty evaluates comments in an otherwise empty field as TRUE)
 - Fixed search function bug that was crashing profile views.
