Add SEO-friendly links to publication itemUrl field
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/library_ipf/trunk@25150 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -33,3 +33,4 @@ Version 1.03 Final (1/8/2013)
 Version 1.04
 ------------
 - Change way dohtml / dobr field visibility and default settings are handled (set properties in initCommonVar()
+- Fix incorrect display of extended_text rather than description field in summary (index) view.
