Make cache flushing selective, only deletes the modified pages. Requires exec() to be enabled on the server.
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/library_ipf/trunk@25168 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -35,3 +35,4 @@ Version 1.04
 - Change way dohtml / dobr field visibility and default settings are handled (set properties in initCommonVar()
 - Fix incorrect display of extended_text rather than description field in summary (index) view.
 - Add SEO friendly URL extension to publication.itemUrl field.
+- Add selective clearance of cached content when a publication is added/edited/deleted
