* Recent publications block will no longer display title if there is no contents.
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/library_ipf/trunk@25412 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -37,3 +37,4 @@ Version 1.04 (unreleased)
 - Add SEO friendly URL extension to publication.itemUrl field.
 - Add selective clearance of cached content when a publication is added/edited/deleted
 - Remove global $libraryConfig in favour of icms_getConfig() in class files.
+- Recent publications block will no longer display title if there is no contents.
