- Change image control to imageupload. - Remove deprecated pass-by-reference calls. - Add support for untagged publications on index page and block.
git-svn-id: https://subversion.assembla.com/svn/impresscmsaddons/modules/library_ipf/trunk@25455 7a4d4d67-0c3a-0410-b24c-89d50c169223

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -38,3 +38,6 @@ Version 1.04 (unreleased)
 - Add selective clearance of cached content when a publication is added/edited/deleted
 - Remove global $libraryConfig in favour of icms_getConfig() in class files.
 - Recent publications block will no longer display title if there is no contents.
+- Change image control to imageupload.
+- Remove deprecated pass-by-reference calls.
+- Add support for untagged publications on index page and block.
